# MIDI-Cube

./: .gitignore  CMakeLists.txt  README.md
components/midi_core/: CMakeLists.txt  midi_core.c  midi_message.c  midi_parser.c  midi_translator.c  ump_message.c  ump_parser.c
components/midi_core/include/: midi_defs.h  midi_message.h  midi_parser.h  midi_translator.h  midi_types.h  ump_defs.h  ump_message.h  ump_parser.h  ump_types.h
components/midi_din/: CMakeLists.txt  midi_din.c
components/midi_ethernet/: CMakeLists.txt  Kconfig  midi_ethernet.c  midi_ethernet_session.c  midi_ethernet_w5500.c
components/midi_ethernet/include/: midi_ethernet.h
components/midi_router/: CMakeLists.txt  midi_router.c
components/midi_router/include/: midi_router.h
components/midi_uart/: CMakeLists.txt  Kconfig  midi_uart.c  midi_uart_config.c
components/midi_uart/include/: midi_uart.h  midi_uart_config.h
components/midi_usb/: CMakeLists.txt  Kconfig  idf_component.yml  midi_usb.c  midi_usb_descriptors.c  midi_usb_device.c  midi_usb_host.c
components/midi_usb/include/: midi_usb.h  midi_usb_descriptors.h  midi_usb_device.h  midi_usb_host.h  tusb_config.h
components/midi_wifi/: CMakeLists.txt  Kconfig  idf_component.yml  midi_wifi.c  midi_wifi_discovery.c  midi_wifi_session.c
components/midi_wifi/include/: midi_wifi.h  midi_wifi_session.h
main/: CMakeLists.txt  main.c  test_midi_core.c  test_midi_core.h
